# surriti

./: .dockerignore  .gitignore  MEMORY_EVOLUTION.md  docker-compose.yml  extract.py  surriti_client.py  test_connect.py  test_empty_fix.py
frontend/: README.md  cli.py  requirements.txt
myapp/: Dockerfile  e2e_smoke.py  requirements.txt  service.py
plugins/memory/surriti/: README.md  __init__.py  cli.py  plugin.yaml
scripts/: format_script.py
surriti/: CHANGELOG.md  README.md  diag.py  pyproject.toml
surriti/examples/: agent_memory.py  contradictions_demo.py  openai_quickstart.py  quickstart.py
surriti/surriti/: __init__.py  _logging.py  driver.py  edges.py  embedder.py  entity_resolution.py  errors.py  graphiti.py  llm.py  llm_clients.py  memory_pack.py  nodes.py  profiles.py  relation_frames.py  rerankers.py  schema.py  search.py  search_filters.py  search_recipes.py  temporal.py  testing.py  utils.py  validators.py
surriti/surriti/cognition/: __init__.py  _jsonio.py  _writes.py  affect.py  associative.py  clustering.py  config.py  consolidation.py  decay.py  goals.py  perspective.py  prediction.py  procedural.py  prompts.py  reinforcement.py  runner.py  scheduler.py  self_awareness.py  state.py  traits.py
surriti/tests/: debug_contradiction.py  debug_extractor.py  test_cognition_e2e.py  test_cognition_unit.py  test_comprehensive_integration.py  test_cycle_integration.py  test_cycle_stress.py  test_entity_resolution.py  test_family_integration.py  test_integration.py  test_integration_surrealdb.py  test_memory_pack_export.py  test_models.py  test_pipeline_fake_driver.py  test_prompt_scripted.py  test_recall_and_profiles.py  test_relation_frames.py  test_sdk_surface.py  test_stress.py  test_unit_extra.py
tests/: stress_test.py  stress_test_contradiction.py  test_connect.py  test_empty_fix.py  test_self_awareness.py
visualizer/: Dockerfile  README.md  requirements.txt  server.py
visualizer/static/: app.js  index.html  styles.css
